# unroll-plugin

./: .gitignore
plugin/: unroll-plugin.cabal
plugin/LoopUnrolling/: Plugin.hs
plugin/LoopUnrolling/Plugin/: Pass.hs  Utilities.hs
tests/: Makefile  Peeling.hs  Unrolling.hs
